<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Contacts</string>
    <string name="action_settings">Settings</string>
    <string name="text_empty_list">You haven\'t entered a value yet.</string>
    <string name="text_add_value">Add Contact</string>
    <string name="text_view_title_contact_firstname">First Name:</string>
    <string name="text_view_title_contact_lastname">Last Name:</string>
    <string name="text_view_title_contact_nickname">Nickname:</string>
    <string name="text_image_hint">Tap to make a picture.</string>
    <string name="canceled_message">Task cancelled</string>
    <string name="title_activity_create_contact">CreateContact</string>
    <string name="hello_world">Hello world!</string>
    <string name="text_button_done">Done</string>
    <string name="title_activity_edit_contact">EditContactActivity</string>
    <string name="text_button_update">Update</string>
    <string name="text_button_delete">Delete Contact</string>

</resources>
