<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="6dp">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/imageView_photo"
            android:cropToPadding="false"
            android:src="@drawable/ic_launcher"
            android:clickable="true"
            android:adjustViewBounds="false"
            android:contentDescription="@string/text_image_hint" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="5">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:gravity="center_vertical">

            <TextView android:id="@+id/text_view_title_firstname"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_weight="1"
                android:textStyle="bold"
                android:text="@string/text_view_title_contact_firstname"
                android:gravity="right" />

            <TextView android:id="@+id/text_view_firstname"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_weight="2"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:gravity="center_vertical">

            <TextView android:id="@+id/text_view_title_lastname"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_weight="1"
                android:textStyle="bold"
                android:text="@string/text_view_title_contact_lastname"
                android:gravity="right" />

            <TextView android:id="@+id/text_view_lastname"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_weight="2"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:gravity="center_vertical">

            <TextView android:id="@+id/text_view_title_nickname"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_weight="1"
                android:text="@string/text_view_title_contact_nickname"
                android:textStyle="bold"
                android:gravity="right" />

            <TextView android:id="@+id/text_view_nickname"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_weight="2" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
